--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "test:eslint": "eslint --ext=js --ext=js src/"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -90,6 +91,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   }
