--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,12 @@
   },
   "rules": {
     "react/jsx-filename-extension": "off",
-    "global-require": "off"
+    "global-require": "off",
+    "react/prop-types": "off",
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }]
   }
 }
