--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "react/jsx-filename-extension": "off",
     "react/prop-types": "off",
+    "function-paren-newline": "off",
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to", "hrefLeft", "hrefRight" ],
