--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "test:eslint": "eslint --ext=js --ext=js src/"
+    "test:eslint": "eslint --ext=js src/"
   },
   "jest": {
     "collectCoverageFrom": [
